van-4205 and van-4327 alignment issues fix

--- a/vtr-ui/src/app/components/battery/battery-indicator/battery-indicator.component.scss
+++ b/vtr-ui/src/app/components/battery/battery-indicator/battery-indicator.component.scss
@@ -172,6 +172,9 @@
 			@media #{$mediaquery_X21} {
 				top: 10%;
 			}
+			@media #{$mediaquery_X23} {
+				left: 0%;
+			}
 			.transparent {
 				color: transparent;
 			}
